--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/PaperMod"]
-	path = themes/PaperMod
+[submodule "hugo/themes/PaperMod"]
+	path = hugo/themes/PaperMod
 	url = https://github.com/adityatelange/hugo-PaperMod
